# game-presence

./: .eslintignore  .eslintrc.yaml  .gitignore  .prettierrc.yaml  README.md  TODO.md  graphql.config.yml  index.html  package-lock.json  package.json  postcss.config.js  quasar.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.quasar/: artifacts.json  client-entry.js
public/html/: auth-init.html
public/html/empty/: index.html
scripts/: generate-art-assets.js
src/: App.vue  TODO.md  fetchStatus.ts  main.ts
src-tauri/: Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: api.rs  app.rs  core.rs  main.rs  service.rs
src-tauri/src/api/: discord.rs  matrix.rs  steam.rs  twitch.rs
src-tauri/src/app/: command.rs  commands.rs  config.rs  data.rs  events.rs  gui.rs  handler.rs  ipc.rs  metadata.rs  model.rs  tray.rs
src-tauri/src/app/data/: build.rs  config.rs
src-tauri/src/app/ipc/: schema.rs
src-tauri/src/app/model/: build.rs  config.rs  discord.rs  gui.rs  presence.rs  session.rs  state.rs  steam.rs
src-tauri/src/core/: discord.rs  xbox.rs
src-tauri/src/service/: nintendo.rs  playstation.rs  twitch.rs  xbox.rs
src-tauri/src/service/xbox/: authorize.rs  autosuggest.rs  presence.rs
src/api/: xbox.js  xbox.ts
src/assets/html/api/twitch/: authorize.html
src/boot/: init.ts
src/components/: AppAbout.vue  AppContent.vue  AppSettings.vue  AppSidebar.vue  AppSteamStatus.vue  HeaderBar.vue  HeaderBarActivityWidget.vue  HeaderBarPlatformWidget.vue  HeaderBarVisibilityWidget.vue  HelloWorld.vue  PresenceView.vue  SideBar.vue
src/css/: app.scss
src/layouts/: MainLayout.vue
src/lib/: api.ts  app.ts  index.ts
src/lib/api/: steamworks.ts
src/lib/api/steamworks/: isteamuser.ts
src/lib/api/steamworks/isteamusers/: getplayersummaries.ts
src/lib/app/: config.ts
src/models/: build.ts  config.ts  gui.ts  index.ts  presence.ts
src/pages/: AboutPage.vue  SettingsPage.vue  SettingsPageActivity.vue  SettingsPageGames.vue  SettingsPageProfiles.vue  SettingsPageServices.vue  SettingsPageServicesNintendo.vue  SettingsPageServicesPlaystation.vue  SettingsPageServicesSteam.vue  SettingsPageServicesTwitch.vue  SettingsPageServicesXbox.vue  StatusPage.vue
src/router/: index.ts  routes.ts
src/stores/: config.ts  gui.ts  index.ts
