[package]
edition = "2021"
name = "game-presence"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
homepage = "https://github.com/silvanshade/game-presence"
repository = "https://github.com/silvanshade/game-presence"
rust-version = "1.65"
description = "An app for reporting game status as Discord presence"

[build-dependencies]
built = { version = "0.5", features = ["chrono", "git2", "semver"] }
snafu = { version = "0.7", features = ["std"] }
tauri-build = { version = "1.1", features = [] }

[dependencies]
async-graphql = { version = "4.0", features = [] }
built = { version = "0.5" }
directories = { version = "4.0" }
discord-rich-presence = { version = "0.2" }
proc-exit = "2.0.0"
serde = { version = "1.0", features = ["derive", "serde_derive", "std"] }
serde_json = { version = "1.0", features = ["std"] }
snafu = { version = "0.7", features = ["std"] }
tauri = { version = "1.2", features = ["compression", "objc-exception", "shell-open", "system-tray", "wry"] }
tauri-plugin-graphql-ipc = { version = "0.0", git = "https://github.com/silvanshade/tauri-plugin-graphql-ipc", features = ["async-graphql"] }
tokio = { version = "1.21", features = ["fs"] }
tracing = { version = "0.1", features = ["attributes", "std"] }
twitch_api2 = { version = "0.6" }
twitch_oauth2 = { version = "0.9" }
warp = { version = "0.3", features = [] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
