[package]
edition = "2021"
name = "game-presence"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
homepage = "https://github.com/silvanshade/game-presence"
repository = "https://github.com/silvanshade/game-presence"
rust-version = "1.65"
description = "An app for reporting game status as Discord presence"

[build-dependencies]
built = { version = "0.5", features = ["chrono", "git2", "semver"] }
snafu = { version = "0.7", features = ["std"] }
tauri-build = { version = "1.1", features = [] }

[dependencies]
async-graphql = { version = "5.0", features = [] }
async-stream = { version = "0.3" }
base64 = { version = "0.20" }
built = { version = "0.5" }
directories = { version = "4.0" }
discord-rich-presence = { version = "0.2" }
futures = "0.3.25"
indoc = { version = "1.0" }
oauth2 = "4.3.0"
percent-encoding = { version = "2.2" }
proc-exit = { version = "2.0", features = [] }
rand = { version = "0.8" }
regex = "1.7.0"
reqwest = { version = "0.11", features = [] }
ring = { version = "0.16" }
serde = { version = "1.0", features = ["derive", "serde_derive", "std"] }
serde_json = { version = "1.0", features = ["std"] }
serde_urlencoded = { version = "0.7", features = [] }
snafu = { version = "0.7", features = ["std"] }
tap = "1.0.1"
tauri = { version = "1.2", features = ["compression", "objc-exception", "reqwest", "shell-open", "system-tray", "wry"] }
tauri-plugin-graphql-ipc = { version = "0.0", features = ["async-graphql"], git = "https://github.com/silvanshade/tauri-plugin-graphql-ipc" }
time = { version = "0.3.17", features = ["serde", "serde-well-known"] }
tokio = { version = "1.21", features = ["fs", "macros"] }
tracing = { version = "0.1", features = ["attributes", "std"] }
triple_accel = { version = "0.4", features = [] }
twitch_api2 = { version = "0.6", features = [] }
twitch_oauth2 = { version = "0.9", features = [] }
url = { version = "2.3", features = [] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "0.18", features = ["v2_16"] }

[target.'cfg(target_os = "macos")'.dependencies]
block = { version = "0.1", features = [] }
objc = { version = "0.2", features = [] }
objc-foundation = { version = "0.1", features = [] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "=0.39", features = [] }
webview2-com = { version = "=0.19.1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[patch.crates-io]
tauri = { path = "../../tauri/core/tauri" }
tauri-runtime = { path = "../../tauri/core/tauri-runtime" }
tauri-runtime-wry = { path = "../../tauri/core/tauri-runtime-wry" }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
